...
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button2"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/shiraz"
            android:clickable="true"
            android:onClick="NavigateToRemindersActivity"
...
