<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_alignParentBottom="true"
    tools:context=".MapActivity">

    <LinearLayout
        android:id="@+id/topBar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="0dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/numAndMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="25dp"
            android:gravity="right"
            android:orientation="vertical" />

    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="1400px"
        android:layout_gravity="center"
        tools:context=".MapActivity" />

    <View
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <LinearLayout

        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/button1"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/shiraz"
            android:clickable="true"
            android:onClick="NavigateToMapsActivity"
            android:text="@string/compass"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button2"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/shiraz"
            android:clickable="true"
            android:onClick="NavigateToRemindersActivity"
            android:text="@string/bell"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button4"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/shiraz"
            android:clickable="true"
            android:onClick="NavigateToDisplayProfile"
            android:text="@string/prof"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button3"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/shiraz"
            android:clickable="true"
            android:onClick="LogOut"
            android:text="@string/logout"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            tools:ignore="TextContrastCheck" />


    </LinearLayout>
</LinearLayout>

