<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="800px"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp"
    android:clipToPadding="false"
    tools:context=".ReminderActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set a reminder" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100px"
        android:text="Set time to be reminded" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="500px"
        android:timePickerMode="spinner"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100px"
        android:text="Which store is this reminder for" />

    <Spinner
        android:id="@+id/store"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:background="@color/shiraz"/>

    <Button
        android:id="@+id/confirmReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Set Reminder" />

</LinearLayout>

