<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp"
    android:clipToPadding="false"
    tools:context=".ReminderActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Open Reminders" />

    <LinearLayout
        android:id="@+id/reminders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <Button
        android:id="@+id/setReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Set Reminder" />

    <View
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-16dp"
        android:layout_marginEnd="-16dp"
        android:layout_marginBottom="-16dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/shiraz"
            android:clickable="true"
            android:onClick="NavigateToMapsActivity"
            android:text="@string/compass"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button2"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/shiraz"
            android:clickable="true"
            android:onClick="NavigateToRemindersActivity"
            android:text="@string/bell"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button4"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/shiraz"
            android:clickable="true"
            android:onClick="NavigateToDisplayProfile"
            android:text="@string/prof"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button3"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/shiraz"
            android:clickable="true"
            android:onClick="LogOut"
            android:text="@string/logout"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</LinearLayout>

